# ectoplasm-contracts

./: .env.example  .gitignore  CEP4626_STANDARD.md  Cargo.toml  DEPLOYMENT_ACTION_PLAN.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_PLAN_PART2.md  LST_QUICK_START.md  Odra.toml  PHASE1_COMPLETE.md  QUICKSTART.md  README.md  VERIFICATION_COMMANDS.md
docs/: local_deployment.md
resources/: contracts.toml
resources/casper_contract_schemas/: ecto_token_schema.json  factory_schema.json  flipper_schema.json  lp_token_schema.json  pair_schema.json  router_schema.json  usdc_token_schema.json  wbtc_token_schema.json  weth_token_schema.json
resources/legacy/: ecto_token_schema.json  factory_schema.json  flipper_schema.json  lp_token_schema.json  pair_schema.json  router_schema.json  usdc_token_schema.json  wbtc_token_schema.json  weth_token_schema.json
scripts/: .env.example  check-balance.sh  check-balances-at-swap.sh  deploy-incentives.sh  deploy-new.out.env  deploy-new.sh  deploy.sh  setup-wallet.sh  test-dex.sh
src/: errors.rs  events.rs  lib.rs  math.rs  token.rs  tokens.rs
src/cep4626/: README.md  events.rs  mod.rs  vault.rs
src/dex/: factory.rs  pair.rs  router.rs  tests.rs
src/farming/: errors.rs  events.rs  mod.rs  rewards_distributor.rs  staking_pool.rs
src/incentives/: gas_discount.rs  incentive_manager.rs  lp_rewards_distributor.rs  mod.rs
src/lending/: aecto_vault.rs  collateral_manager.rs  errors.rs  events.rs  interest_rate.rs  lending_pool.rs  liquidation.rs  mod.rs  price_oracle.rs
src/lst/: README.md  errors.rs  events.rs  mod.rs  scspr_token.rs  (+2 more)
