[package]
name = "ectoplasm_contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", features = [], default-features = false }

[dev-dependencies]
odra-test = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", features = [], default-features = false }

[build-dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", features = [], default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
odra-build = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", features = [], default-features = false }
odra-cli = { git = "https://github.com/odradev/odra", branch = "release/2.5.0", features = [], default-features = false }

[[bin]]
name = "ectoplasm_contracts_build_contract"
path = "bin/build_contract.rs"
test = false

[[bin]]
name = "ectoplasm_contracts_build_schema"
path = "bin/build_schema.rs"
test = false

[[bin]]
name = "ectoplasm_contracts_cli"
path = "bin/cli.rs"
test = false

[profile.release]
codegen-units = 1
lto = true

[profile.dev.package."*"]
opt-level = 3
